# NW-checker

./: .coverage  .gitattributes  .gitignore  AGENTS.md  README.md  agent.md  codex_run_tests.sh  coverage.xml  dynamic_scan_results.db  flutter_env.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.sh
configs/: approved_devices.json  dangerous_countries.json  domain_blacklist.txt
data/: dns_blacklist.txt
docs/: development_memo.md  dynamic_scan_api.md  static_scan_api.md
nw_checker/: .coverage  .gitignore  README.md  check_coverage.py  codex_run_tests.sh  pubspec.yaml
nw_checker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: api.py  discover_hosts.py  models.py  network_map.py  port_scan.py  server.py  static_scan.py  topology_builder.py
test/: test_topology_builder.py
tests/: conftest.py  test_additional_scan_modules.py  test_api.py  test_api_auth.py  test_api_dns_history.py  test_api_dynamic_scan.py  test_api_dynamic_scan_alias.py  test_api_dynamic_scan_underscore_alias.py  test_api_health.py  test_api_static_scan.py  test_arp_table.py  test_blacklist_updater.py  test_device_tracker.py  test_discover_hosts.py  test_dns_analyzer.py  test_dynamic_scan.py  test_dynamic_scan_analyze.py  test_dynamic_scan_capture.py  test_dynamic_scan_dns_analyzer.py  test_dynamic_scan_parser.py  test_dynamic_scan_scheduler.py  test_dynamic_scan_storage.py  test_flutter_ci_workflow.py  test_generate_topology.py  test_history_api.py  test_network_map.py  test_new_scan_modules.py  test_os_banner.py  test_port_scan.py  test_ports_functionality.py  (+13 more)
(+2836 files in other folders)
